src/dts/tests/modules/modules.exp

modules.js:5:16,18: number
This type is incompatible with
modules.js:6:9,14: string

modules.js:5:22,24: property y
Error:
modules.js:6:9,14: string
This type is incompatible with
[LIB] modules.js:4:18,23: number

Found 2 errors
